# 7zipExplorerExtension

./: .gitignore  7ZipMenu.slnx  7ZipMenu.vcxproj  7ZipMenuStub.vcxproj  CMakeLists.txt  LICENSE  README.md
Package/: Package.appxmanifest
manifest/: AppxManifest.xml  dllmanifest.manifest
old/: 7ZipExplorerExtension.sln  7ZipMenuStub.vcxproj
old/Package/: Package.wapproj
old/scripts/: create-certificate.ps1  install.ps1
old/src/: 7ZipMenu.rc  ExplorerCommand.h  SevenZipUtils.h  SubCommands.cpp  SubCommands.h  dllmain.cpp  resource.h  stub.cpp
scripts/: build.ps1  create-certificate.ps1  install.ps1  uninstall.ps1
src/: CommandEnumerator.cpp  CommandEnumerator.h  ExplorerCommand.cpp  RootCommand.cpp  RootCommand.h  SevenZipUtils.cpp  Source.def  SubCommands.cpp  SubCommands.h  framework.h
src/7ZipMenu/: 7ZipMenu.csproj  ClassFactory.cs  CommandEnumerator.cs  DllExports.cs  ExplorerCommandBase.cs  SevenZipRootCommand.cs  SevenZipUtils.cs
src/7ZipMenu/NativeMethods/: Enums.cs  IClassFactoryLocal.cs  IEnumExplorerCommand.cs  IExplorerCommand.cs  ShellInterfaces.cs
src/7ZipMenu/SubCommands/: CmdAddTo7z.cs  CmdAddToArchive.cs  CmdAddToZip.cs  CmdCompressAndEmail.cs  CmdCompressTo7zEmail.cs  CmdCompressToZipEmail.cs  CmdExtractFiles.cs  CmdExtractHere.cs  CmdExtractToFolder.cs  CmdOpenArchive.cs  CmdSeparator.cs  CmdTestArchive.cs
src/7ZipMenuStub/: 7ZipMenuStub.csproj  Program.cs
src/Package/: Package.appxmanifest  Package.wapproj
